# compressor

./: .gitignore  Cargo.toml  README.md
benches/: bv.rs  lz.rs
docs/: Details.md  details.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: lz4.rs  lz4_decode.rs  simple_decoder.rs  simple_encoder.rs
scripts/: compare.sh  compare_pareto.py  gen_lz_testcase.py  gen_sharp_input.py
src/: bitvector.rs  block.rs  full.rs  lib.rs  nop.rs  pager.rs  utils.rs
src/coding/: adaptive.rs  arithmetic.rs  bitonic.rs  entropy.rs  hist.rs  mod.rs  models.rs  paged.rs  simple.rs
src/lz/: lz4.rs  matcher.rs  mod.rs
src/models/: bitwise.rs  dmc.rs  mixer.rs  mod.rs  model.rs
tests/: block_and_full.rs  bv.rs  encoder.rs  hist.rs  lz4.rs  matcher.rs  nop.rs  utils.rs
