[package]
name = "compressor-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.compressor]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "lz4"
path = "fuzz_targets/lz4.rs"
test = false
doc = false

[[bin]]
name = "lz4_decode"
path = "fuzz_targets/lz4_decode.rs"
test = false
doc = false

[[bin]]
name = "simple_encoder"
path = "fuzz_targets/simple_encoder.rs"
test = false
doc = false

[[bin]]
name = "simple_decoder"
path = "fuzz_targets/simple_decoder.rs"
test = false
doc = false
